tests/data/external-auth/ingress/standard-signin/ext-auth-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.org/policies: "external-auth-policy-signin"
  name: ext-auth-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: ext-auth-ingress.example.com
    http:
      paths:
      - path: /backend1
        pathType: Prefix
        backend:
          service:
            name: backend1-svc
            port:
              number: 80
